# MIPT-Parallel-Programming

./: .gitignore  README.md
6 term/Exponent/: Makefile  exponent.c
6 term/Exponent/gmp-6.1.2/: Makefile  config.status
6 term/Hello World/: hello_world.c
6 term/Lab 1/: Makefile  Results.ods  tools.h
6 term/Lab 2/: main.c
6 term/Life Simulator/: Makefile  init_file_int.txt  lisimperf.cpp  tools.h
6 term/Life Simulator Pthreads/: Makefile  config.h  create_init_file.py  lisimperf.cpp
6 term/Pthread attributes/: Makefile
6 term/Send Recv BackToBack/: program.c
7 term/ArrayMean/: Makefile  program.c  support.h
7 term/Exponent/: Makefile  exponent.c  support.c
7 term/Harmonic/: Makefile  harmonic.c
7 term/Life Simulator/: CMakeLists.txt  lifesim.cpp  matrix.cpp  matrix.h  support.cpp  support.h
7 term/OrderedIds/: Makefile  program.c
7 term/Shooting Method/: Makefile  plot.gnu  shooting.c
7 term/Termodynamics/: Makefile  matrix.h  program.cpp
Exponent/: mpi_gmp.c
Exponent/gmp-6.1.2/: config.h  libtool
Harmonic Series/: Makefile  harmonic  harmonic.c
Hello World/: Makefile  hello_world
Lab 1/: problem_config.h  solution.c
Lab 1/transfer_time/: time  time.c
Lab 2/: Makefile  tools.h
Life Simulator/: config.h  core_matrix.cpp  core_matrix.h
Life Simulator Pthreads/: core_matrix.cpp  core_matrix.h  init_file.txt
Life Simulator Pthreads/lisim_vizualizer/: init_file_int.txt
Life Simulator/lisim_vizualizer/: lisim_perfrunner_60  main.py
Pthread attributes/: print_attr.c
Send Recv BackToBack/: Makefile  send_recv
(+33 files in other folders)
